--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -6292,8 +6292,12 @@ video {
   font-size: 4rem;
 }
 
-.text-7xl {
-  font-size: 7rem;
+.text-6vw {
+  font-size: 4vw;
+}
+
+.text-7vw {
+  font-size: 7vw;
 }
 
 .leading-3 {
@@ -20042,8 +20046,12 @@ video {
     font-size: 4rem;
   }
 
-  .sm\:text-7xl {
-    font-size: 7rem;
+  .sm\:text-6vw {
+    font-size: 4vw;
+  }
+
+  .sm\:text-7vw {
+    font-size: 7vw;
   }
 
   .sm\:leading-3 {
@@ -33793,8 +33801,12 @@ video {
     font-size: 4rem;
   }
 
-  .md\:text-7xl {
-    font-size: 7rem;
+  .md\:text-6vw {
+    font-size: 4vw;
+  }
+
+  .md\:text-7vw {
+    font-size: 7vw;
   }
 
   .md\:leading-3 {
@@ -47544,8 +47556,12 @@ video {
     font-size: 4rem;
   }
 
-  .lg\:text-7xl {
-    font-size: 7rem;
+  .lg\:text-6vw {
+    font-size: 4vw;
+  }
+
+  .lg\:text-7vw {
+    font-size: 7vw;
   }
 
   .lg\:leading-3 {
@@ -61295,8 +61311,12 @@ video {
     font-size: 4rem;
   }
 
-  .xl\:text-7xl {
-    font-size: 7rem;
+  .xl\:text-6vw {
+    font-size: 4vw;
+  }
+
+  .xl\:text-7vw {
+    font-size: 7vw;
   }
 
   .xl\:leading-3 {
